<resources>
    <!--  Main -->
    <string name="app_name">FWallet</string>

    <!--  General -->
    <string name="coin_symbol_placeholder">XCH</string>
    <string name="currency_symbol_placeholder">EUR</string>

    <string name="rationale_title">Permission needed</string>
    <string name="rationale_message">These permissions are required for the application to work</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="error">Error!</string>
    <string name="error_cannot_run_without_permissions">The application can\'t work without these permissions: %s. Please manually set them</string>

    <!--  Navigation -->
    <string name="navigation_title_wallet">Wallet</string>
    <string name="navigation_title_wallet_detail">Wallet Detail</string>
    <string name="navigation_title_swap">Swap</string>
    <string name="navigation_title_pool">Pool</string>
    <string name="navigation_title_transaction_record_dialog">Transaction Record</string>

    <!--  Activity Splash -->
    <string name="activity_splash_welcome_to">Welcome to</string>
    <string name="activity_splash_farming">Farming</string>
    <string name="activity_splash_wallet">Wallet</string>
    <string name="activity_splash_for">For</string>
    <string name="activity_splash_by_farmingpool_eu">By farmingpool.eu</string>
    <string name="activity_splash_create_new_wallet">Create New Wallet</string>
    <string name="activity_splash_import_existing_one">Import Existing One</string>

    <!--  Activity New Wallet -->
    <string name="activity_new_wallet_create_new_wallet">Create New Wallet</string>

    <!--  Fragment Keywords Creation -->
    <string name="fragment_keywords_creation_copy">Copy</string>
    <string name="fragment_keywords_creation_don_t_share">Don’t share them with other people!</string>
    <string name="fragment_keywords_creation_write_or_copy">Write or copy these words in the correct order and keep them in a safe place.</string>
    <string name="fragment_keywords_creation_your_backup_words">Your backup words</string>
    <string name="fragment_keywords_creation_next">Next</string>
    <string name="fragment_keywords_creation_copied">Copied to clipboard!</string>

    <!--  Fragment Keywords Check -->
    <string name="fragment_keywords_check_verify_your_backup_words">Verify your backup words</string>
    <string name="fragment_keywords_check_write_the_word">Write the word corresponding to the provided number.</string>

    <!--  Fragment Wallet Created -->
    <string name="fragment_account_created_farming">Farming</string>
    <string name="fragment_account_created_wallet">Wallet</string>
    <string name="fragment_account_created_success">Success!</string>
    <string name="fragment_account_created_wallet_created">Wallet Created</string>
    <string name="fragment_account_created_give_a_name">Give a name to your account</string>
    <string name="fragment_account_created_account_name_placeholder">Account1</string>
    <string name="fragment_account_created_done">Done</string>
    <string name="fragment_account_created_account">Account %d</string>

    <!--  Fragment Wallet -->
    <string name="fragment_transactions_title">Transactions</string>
    <string name="fragment_prices_title">Prices</string>

    <!--  Item Transaction Record -->
    <string name="item_transaction_record_operation_received">Received</string>
    <string name="item_transaction_record_operation_sent">Sent</string>
    <string name="item_transaction_record_amount_placeholder" translatable="false">+1.45 XHC</string>
    <string name="item_transaction_record_date_placeholder" translatable="false">09:30 - 12/12/2021</string>
    <string name="item_transaction_record_corresponding_placeholder" translatable="false">1,800.00 €</string>

    <!--  Item Account Balance -->
    <string name="item_account_balance_balance">Balance</string>

    <!--  Item Wallet Balance -->
    <string name="item_wallet_balance_wallet_address_placeholder">xch13…45fe</string>
    <string name="item_wallet_balance_balance">Balance</string>
    <string name="item_wallet_balance_amount_placeholder">1,35 XCH</string>
    <string name="item_wallet_balance_corresponding_placeholder">1,834,34 $</string>

    <!--  Dialog Transaction Record -->
    <string name="dialog_transaction_record_amount">Amount</string>
    <string name="dialog_transaction_record_date">Date</string>
    <string name="dialog_transaction_record_sender">Sender</string>
    <string name="dialog_transaction_record_receiver">Receiver</string>
    <string name="dialog_transaction_record_sender_placeholder">xch13…45fe</string>
    <string name="dialog_transaction_record_receiver_placeholder">xch13…45fe</string>

    <!--  Item Send Receive Buttons -->
    <string name="isr_send">Send</string>
    <string name="isr_receive">Receive</string>

    <!--  Dialog Add Wallet -->
    <string name="dialog_add_wallet_select_a_coin_to_add">Select a Coin to add:</string>

    <!--  Dialog Change Account -->
    <string name="dialog_change_account_add_new_account">Add New Account</string>
    <string name="dialog_change_account_import_existing_one">Import Existing One</string>

    <!--  Item Wallet -->
    <string name="item_wallet_coin_name_placeholder">Chia</string>
    <string name="item_wallet_coin_amount_placeholder">14.0 XCH</string>
    <string name="item_wallet_value_placeholder">10,000.00$</string>
    <string name="item_wallet_change_placeholder">+35%</string>
    <string name="item_wallet_corresponding_placeholder">100,000.00 $</string>
    <string name="item_wallet_add_coin">+ Add Coin</string>

    <!--  Item Keyword -->
    <string name="item_keyword_number_placeholder" translatable="false">1.</string>
    <string name="item_keyword_word_placeholder" translatable="false">word</string>

    <!--  Item Add Wallet -->
    <string name="item_add_wallet_coin_name_placeholder">Chia</string>

    <!--  Item Account -->
    <string name="item_account_account_name_placeholder">Account Name Placeholder</string>

    <!--  Activity Send -->
    <string name="activity_send_send">Send</string>

    <!--  Fragment Select Receiver -->
    <string name="fragment_select_receiver_contact">Contact</string>
    <string name="fragment_select_receiver_qr">QR</string>
    <string name="fragment_select_receiver_next">Next</string>
    <string name="fragment_select_receiver_receiver_address">Receiver Address</string>
    <string name="fragment_select_amount_amount">Amount</string>

    <!--  Fragment Select Amount -->
    <string name="fragment_select_amount_0">0</string>
    <string name="fragment_select_amount_expected_fees_placeholder">Expected fees: 0.005€</string>
    <string name="fragment_select_amount_min">min</string>
    <string name="fragment_select_amount_half">half</string>
    <string name="fragment_select_amount_max">max</string>
    <string name="fragment_select_amount_amount_max_placeholder">100.00 XCH</string>
    <string name="fragment_select_amount_amount_min_placeholder">0.01 XCH</string>

    <!--  Item Contact Name -->
    <string name="item_contact_name_placeholder">John Mayer</string>

    <!--  Dialog Select Contact -->
    <string name="dialog_select_contact_contact">Contact</string>

    <!--  Dialog Scan Receiver QR Code -->
    <string name="dialog_scan_receiver_qr_code_qr_code">QR Code</string>
    <string name="dialog_select_wallet_select_a_coin">Select a Coin</string>
    <string name="activity_send_select_coin">Select Coin</string>
</resources>
