<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/walletFragment">

    <fragment
        android:id="@+id/walletFragment"
        android:name="eu.farmingpool.farmingwallet.ui.account.AccountFragment"
        android:label="@string/navigation_title_wallet"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/swapFragment"
        android:name="eu.farmingpool.farmingwallet.ui.swap.SwapFragment"
        android:label="@string/navigation_title_swap"
        tools:layout="@layout/fragment_swap" />

    <fragment
        android:id="@+id/poolFragment"
        android:name="eu.farmingpool.farmingwallet.ui.pool.PoolFragment"
        android:label="@string/navigation_title_pool"
        tools:layout="@layout/fragment_pool" />

    <fragment
        android:id="@+id/walletDetailFragment"
        android:name="eu.farmingpool.farmingwallet.ui.wallet.WalletFragment"
        android:label="@string/navigation_title_wallet_detail"
        tools:layout="@layout/fragment_wallet" />

    <dialog
        android:id="@+id/transactionRecordDialog"
        android:name="eu.farmingpool.farmingwallet.ui.wallet.TransactionRecordDialog"
        android:label="@string/navigation_title_transaction_record_dialog"
        tools:layout="@layout/dialog_transaction_record" />
</navigation>