<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_activity_main"
    android:orientation="vertical"
    android:padding="@dimen/activity_splash_padding">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="32dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/styleTextLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_splash_vertical_space"
                android:text="@string/activity_splash_welcome_to" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_splash_vertical_space"
                android:orientation="horizontal">

                <TextView
                    style="@style/styleTextHuge.Accent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_splash_farming"
                    android:textStyle="bold" />

                <TextView
                    style="@style/styleTextHuge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_splash_wallet"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/styleTextLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_splash_vertical_space"
            android:gravity="center"
            android:text="@string/activity_splash_for" />

        <ImageView
            android:layout_width="@dimen/activity_splash_icon_size"
            android:layout_height="@dimen/activity_splash_icon_size"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@drawable/ic_coin_chia" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_header"
        app:layout_constraintVertical_bias="0.2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_create_new_wallet"
            style="@style/buttonSplashActivity"
            android:layout_marginBottom="@dimen/activity_splash_vertical_space"
            android:text="@string/activity_splash_create_new_wallet"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_import_existing_wallet"
            style="@style/buttonSplashActivity"
            android:text="@string/activity_splash_import_existing_one"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        style="@style/styleTextSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:gravity="center"
        android:text="@string/activity_splash_by_farmingpool_eu"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="4dp" />
</androidx.constraintlayout.widget.ConstraintLayout>