<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_balance_half_icon_size"
        android:background="@drawable/background_item_balance"
        android:orientation="vertical"
        android:padding="@dimen/item_balance_content_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/styleTextNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_wallet_balance_balance" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/item_balance_elements_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_item_balance_balance"
                style="@style/styleTextNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/item_wallet_balance_amount_placeholder" />

            <View
                android:layout_width="@dimen/item_balance_separator_width"
                android:layout_height="@dimen/item_balance_separator_height"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tv_item_balance_corresponding"
                style="@style/styleTextNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/item_wallet_balance_corresponding_placeholder" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_wallet_address"
            android:gravity="center"
            android:text="@string/item_wallet_balance_wallet_address_placeholder"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_item_balance_icon"
        android:layout_width="@dimen/item_balance_icon_size"
        android:layout_height="@dimen/item_balance_icon_size"
        android:contentDescription="@null"
        android:src="@drawable/ic_coin_chia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>