<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".activities.SendActivity"
    tools:showIn="@layout/activity_send">

    <TextView
        android:id="@+id/textView3"
        style="@style/styleTextNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_select_receiver_large_margin"
        android:gravity="center"
        android:labelFor="@id/et_fragment_select_receiver_receiver_address"
        android:text="@string/fragment_select_amount_amount"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_receiver_address"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/textView4"
            style="@style/styleTextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/coin_symbol_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/styleTextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/currency_symbol_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_fragment_select_amount_amount_coin"
            style="@style/styleTextHuge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@null"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@null"
            android:inputType="number"
            android:text="@string/_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/view2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="@dimen/fragment_select_receiver_separator_width"
            android:layout_height="@dimen/fragment_select_receiver_separator_height"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_fragment_select_amount_amount_currency"
            style="@style/styleTextHuge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@null"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@null"
            android:inputType="number"
            android:text="@string/_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view2"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView5"
        style="@style/styleTextNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="end"
        android:text="@string/fragment_select_amount_expected_fees_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/sb_fragment_select_amount_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:progress="20"
            android:progressDrawable="@drawable/progress_seek_bar"
            android:splitTrack="false"
            android:thumb="@drawable/thumb_seek_bar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            style="@style/styleTextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_select_amount_min"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sb_fragment_select_amount_amount" />

        <TextView
            style="@style/styleTextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_select_amount_half"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sb_fragment_select_amount_amount" />

        <TextView
            style="@style/styleTextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="max"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sb_fragment_select_amount_amount" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>