<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_activity_main"
    android:orientation="vertical"
    android:padding="@dimen/activity_send_content_padding">

    <LinearLayout
        android:id="@+id/ll_activity_send_coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_send_24" />

        <TextView
            style="@style/styleTextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_send_send_margin"
            android:text="@string/activity_send_send" />

        <TextView
            android:id="@+id/tv_activity_send_coin"
            style="@style/styleTextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_send_select_coin"
            android:textColor="?colorAccent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_arrow_down_24" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_activity_send_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/ic_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/activity_send_nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/tv_activity_send_account"
        app:layout_constraintTop_toBottomOf="@+id/ll_activity_send_coin"
        app:navGraph="@navigation/navigation_activity_send"
        tools:layout="@layout/fragment_select_amount"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tv_activity_send_account"
        style="@style/styleTextNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/item_account_account_name_placeholder"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

